# CacheManager

./: .env  .gitignore  README.md  RefactorChecklist.md  __init__.py  commit_message.txt  create_placeholders.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  sphinx-build.conf
.github/workflows/: codeql.yml
cachemanager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: README.md  fix_headers.py
docs/scripts/: create_placeholders.py  fix_headers.py
docs/source/: conf.py  configuration.rst  contributing.rst  examples.rst  index.rst
docs/source/advanced/: adaptive_ttl.rst  bulk_operations.rst  compression.rst  distributed_features.rst  (+3 more)
src/: __init__.py  cache_config.py  cache_manager.py
src/cache_layers/: __init__.py  base_layer.py  disk_layer.py  memory_layer.py  redis_layer.py
src/core/: __init__.py  adaptive_ttl.py  cache_warmup.py  circuit_breaker.py  distributed_lock.py  exceptions.py  invalidation.py  logging_setup.py  security.py  sharding.py  telemetry.py
src/utils/: __init__.py  compression.py  disk_cache.py  initialization.py  namespacing.py  serialization.py
tests/: check_fixture_types.py  conftest.py  debug_test.py  pytest_types.py  run_tests.py  run_tests_main.py  test_adaptive_ttl.py  test_advanced_features.py  test_bulk_operations.py  test_cache_enhancements.py  test_cache_manager.py  test_cache_warmup.py  test_compression.py  test_decorators.py  test_disk_monitoring.py  test_distributed_features.py  test_eviction_policies.py  test_hybrid_cache.py  test_namespacing.py  test_resilience.py  test_security.py  test_telemetry.py
(+5 files in other folders)
